Multi-project structure